cmake_minimum_required(VERSION 3.16.3)
project(AppServer C)
SET(OSAL_SYSTEM_BSPTYPE generic-linux)
SET(APPSrcDir src)
SET(APPIncDir inc)
SET(OSALDir osal)
add_subdirectory(inc)
add_subdirectory(osal)
add_executable(AppServer ${APPSrcDir}/AppOSAL.c ${APPSrcDir}/taskingtest.c ${APPSrcDir}/taskingtest.h ${APPSrcDir}/NetSupport.h ${APPSrcDir}/NetSupport.c)
target_link_libraries(AppServer PUBLIC inc osal)
target_include_directories(AppServer PUBLIC ${APPIncDir} ${APPSrcDir} ${OSALDIR})
